--- a/TODO
+++ b/TODO
@@ -1,17 +1,7 @@
-
-- Implement wait-for-input-internal for
-    * SBCL Win32
-
-- Implement errors for (the alien interface code of)
-    * SBCL Unix
-    * CMUCL Unix
-    * OpenMCL
-
-
-- Extend ABCL socket support with the 4 java errors in java.net.*
-  so that they can map to our usocket errors instead of mapping
-  all errors to unknown-error.
-
+- Fix condition systems (making all implementation generate same error)
 - Add INET6 support.
+- UDP support for Digitool MCL
+- IOlib backend
+- SOCKET-OPTION (at least :BROADCAST and :READ-TIMEOUT)
 
 For more TODO items, see http://trac.common-lisp.net/usocket/report.
